==================== 2.25.2 ====================
==================== 2.25.1 ====================

2008-10-24  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Added German translation. 
	* Makefile.am: Added de to DOC_LINGUAS.

2008-10-21  Jordi Mallach  <jordi@sindominio.net>

	* ca@valencia/ca@valencia.po: New Valencian (Southern Catalan)
	translation based on the Catalan file.
	* Makefile.am: Added Valencian (Southern Catalan) (ca@valencia)
	translation.

==================== 2.24.0.1 ====================

2008-07-08  Gerd Kohlberger  <gerdk@svn.gnome.org>

	Remove pa.po from toplevel help dir. A newer version is in
	the right location (pa/pa.po). See the changelog entry from
	2007-01-25.

==================== 2.23.2 ====================

2008-03-05  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Updated Spanish translation

2008-02-15  Luca Ferretti  <elle.uca@libero.it>

	* it/it.po:
	* Makefile.am:
	Added Italian translation.

2008-01-20  Yannig Marchegay <yannig@marchegay.org>
	
	* oc.po: Updated Occitan translation.
	
2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	* C/config-mouse.xml:
	Remove XML header line.

2008-01-14  Denis Washington  <denisw@svn.gnome.org>

	* C/config-mouse.xml:
	Updated to reflect the changes to the mouse capplet, e.g. the new
	Accessibility tab.

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.

2007-12-26  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt/pt.po: Added Portuguese translation by Bruno Queiros
	<brunomiguelqueiros@sapo.pt>.
	* Makefile.am: Added Portuguese (pt) to DOC_LINGUAS.

2007-08-14  Satoru SATOH <ss@gnome.gr.jp>

	* Makefile.am: Added ja to DOC_LINGUAS.
	* ja/ja.po: Added Japanese translation.

2008-08-03 Jordi Mas <jmas@softcatala.org>

	* Makefile.am: Added ca to DOC_LINGUAS
	* pt_BR/pt_BR.po: Added Catalan translation by Joan Duran

2007-07-01  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
