@@ -1,3 +1,9 @@
+2008-12-18  Bastien Nocera  <hadess@hadess.net>
+
+	* C/config-sound.xml:
+	* Makefile.am:
+	* es/config-sound.xml: Remove docs for the sound capplet
+
 ==================== 2.25.2 ====================
 ==================== 2.25.1 ====================
 
